@@ -86,6 +86,7 @@ void pj_deallocate_grids(void);
 void pj_clear_initcache(void);
 int pj_is_latlong(projPJ);
 int pj_is_geocent(projPJ);
+void pj_get_spheroid_defn(projPJ defn, double *major_axis, double *eccentricity_squared);
 void pj_pr_list(projPJ);
 void pj_free(projPJ);
 void pj_set_finder( const char *(*)(const char *) );
